# lifeorig

./: .gitignore  Makefile  README.md  config.json  pyproject.toml  requirements.txt  setup.py
TESTS/: RobbyGA.py  euler-maruyama.py  test-evol-dyn.py  test-kin-solver.py
TEST_SCRIPTS/: run_atmdyn_solver.sh  run_earth_like.sh  run_exoplanet_from_catalog.sh  run_preset_planet.sh  run_titan.sh
doc/: PAPER_ROADMAP.md  hydrosphere_geochemistry_pathway.aux  hydrosphere_geochemistry_pathway.out  hydrosphere_geochemistry_pathway.tex  protocell_formation_phases.aux  protocell_formation_phases.out  protocell_formation_phases.tex
hitran_data/: CH4_0.data  CH4_0.header  CO.data  CO2.data  CO2_0.header  H2O_0.header  H2O_1.header  O2.data  O2_0.data  O2_0.header  O2_1.data  O2_1.header  OH_0.data  OH_0.header
lifeorig/: __main__.py  build_acf_set.py  catalysts_set.py  gillespie.py  gillespie_algo.py  graph_class.py  mutation_rate.py  parser.py  plot_mut_rate.py  plot_xoft.py  quasi_species_solver.py  reaction_network.py  read_input.py  set_rndm_matrix.py  splot_net_fitness.py
lifeorig.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: RAF_engine.py  __main__.py  build_acf_set.py  build_acfs_popul.py  build_sample_space.py  catalysts_set.py  fitness_distr.py  gillespie_algo.py  logging_module.py  molecular_dyn_solver.py  mutation_rate.py  network_fitness.py  network_predict.py  plot_aij.py  plot_catal_distr.py  plot_fitness_distrib.py  plot_mut_rate.py  plot_xoft.py  quasi_species_solver.py  reaction_network.py  read_input.py  set_rndm_matrix.py  splot_net_fitness.py  (+1 more)
(+227 files in other folders)
