[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["env", "src"]
exclude = ["TESTS"]

[project]
name = "lifeorig"
version = "1.0.0"
authors = [
    { name = "Jacopo Simoni", email="jsimoni@wisc.edu" },
]
description = "The lifeorig code is designed to evolve chemical networks and study possible mechanisms of early life evolution."
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
